# jobfuscator

./: .gitattributes  Cargo.toml  README.md  test.sh
.github/workflows/: ci.yaml
binary_reader/: Cargo.toml
binary_reader/src/: bit_reader.rs  byte_reader.rs  lib.rs
binary_writer/: Cargo.toml
binary_writer/src/: bit_writer.rs  byte_writer.rs  lib.rs
classfile/: Cargo.toml
classfile/src/: access_flags.rs  attributes.rs  bytecode.rs  classfile.rs  constant_pool.rs  descriptor.rs  fields.rs  lib.rs  methods.rs  reference_kind.rs  utils.rs  writer.rs
cli_parser/: Cargo.toml
cli_parser/src/: lib.rs
date/: Cargo.toml
date/src/: lib.rs
e2e/: Cargo.toml  TEST.md  TESTING.md
e2e/src/: main.rs
javap/: Cargo.toml
javap/src/: javap.rs  line_writer.rs  main.rs
jobf/: Cargo.toml
jobf/src/: main.rs  make_everything_public.rs  pipeline.rs  shuffle_constant_pool.rs  shuffle_fields.rs  shuffle_methods.rs  transformation.rs  transformations.rs
sha/: Cargo.toml
sha/src/: lib.rs
src/: main.rs
test/: TEST.md  run_e2e_tests.sh  run_test.sh
time/: Cargo.toml
time/src/: lib.rs
unzipper/: Cargo.toml
unzipper/src/: main.rs
zip/: Cargo.toml
zip/src/: deflate.rs  lib.rs  zip_parser.rs  zip_reader.rs  zip_writer.rs
