[workspace]
members = [
    "binary_reader",
    "binary_writer",
    "date",
    "classfile",
    "sha",
    "javap",
    "jobf",
]
resolver = "3"

[profile.dev]
opt-level = 0
debug-assertions = true
incremental = true
panic = "unwind"

[profile.release]
opt-level = 3
debug-assertions = false
incremental = false
panic = "abort"
